sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:11: error: not found: value i
    	if (!isSmaller(i,i+1)) {
                       ^AlgCocktailSort1:11: error: not found: value i
    	if (!isSmaller(i,i+1)) {
                         ^AlgCocktailSort1:12: error: not found: value i
      	swap(i,i+1);swapped=true
             ^AlgCocktailSort1:12: error: not found: value i
      	swap(i,i+1);swapped=true
               ^